<resources>
    <string name="app_name">Student-Attendance-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_attendance_app">Student Attendance App</string>
    <string name="login">Login</string>
    <string name="register_to_teacher">Register to Teacher</string>
    <string name="register_to_student">Register to Student</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="classes">Class</string>
    <string name="name">Name</string>
    <string name="close">Close</string>
    <string name="new_class">New Class</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="teacher">Teacher</string>
    <string name="student_name">Student Name</string>
    <string name="student_class">Student Class</string>
    <string name="student_email">Student Email</string>
    <string name="status">Status</string>
    <string name="attendance">Attendance</string>
    <string name="date">Date</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="lesson_details">Lesson Details</string>
    <string name="time">Time</string>
    <string name="submit">Submit</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="created_at">Created At</string>
    <string name="count">Count</string>
    <string name="person">Person</string>
    <string name="back">back</string>
    <string name="class_details">Class Details</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="clear">Clear</string>
    <string name="refresh">refresh</string>
    <string name="lesson_page">Lesson Page</string>
    <string name="empty">empty</string>
    <string name="it_was_no_lesson_for_now">It was no lesson for now</string>
    <string name="note">Note</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="it_don_t_have_any_class_yet">It don\'t have any class yet</string>
    <string name="class_page">Class Page</string>
    <string name="home_page">Home Page</string>
    <string name="today_don_t_have_any_lesson">Today don\'t have any lesson</string>
    <string name="student_details">Student Details</string>
    <string name="student_list">Student List</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="n_a">N/A</string>
    <string name="update">Update</string>
    <string name="check">Check</string>
    <string name="student_details_edit">Student Details Edit</string>
    <string name="search_by_email">Search by email</string>
    <string name="search_by_date">Search by date</string>
    <string name="edit_note">Edit Note</string>
    <string name="description">Description</string>
    <string name="creadtedby">CreadtedBy</string>
    <string name="classname">ClassName</string>
    <string name="note_page">Note Page</string>
    <string name="note_details">note details</string>
    <string name="on_submit_msg">Check out your mailbox, you will receive an email containing link where you can reset your password</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout ?</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="don_t_have_any_lesson_yet">Don\'t have any lesson yet</string>
    <string name="don_t_have_any_student_yet">Don\'t have any student yet</string>
    <string name="delete_class">Do you sure want to delete this class ?</string>
    <string name="delete_student">Do you sure want to delete this student ?</string>
    <string name="delete_lesson">Do you sure want to delete this lesson ?</string>
    <string name="cannot_delete_class">You cannot delete this class, because it still have student</string>
    <string name="timeout_message">Oops.....time ran out :( :  </string>
    <string name="score_message">You Scored: </string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="currently_don_t_have_any_notes">Currently don\'t have any notes</string>
</resources>