<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.student.StudentDetailsFragment">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_details"
            android:layout_centerInParent="true"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/ibEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_below="@id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardUseCompatPadding="true"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp">

            <LinearLayout
                android:id="@+id/llStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/student_list"
                    android:textStyle="bold"
                    style="@style/TextAppearance.Material3.TitleLarge"/>

                <TextView
                    android:id="@+id/studentCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/count"
                    android:textAlignment="textEnd"
                    style="@style/TextAppearance.Material3.TitleMedium"/>

            </LinearLayout>

            <TableLayout
                android:layout_below="@id/llStudent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">

                <TableRow android:background="@color/black" android:padding="5dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAlignment="center"
                        android:layout_weight="2"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/classes"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/created_at"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>
                </TableRow>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvStudent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </ScrollView>

            </TableLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>