<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@color/app_bg"
    tools:context=".ui.screens.classes.StudentClassesFragment">

    <LinearLayout
        android:id="@+id/llClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/className"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/classes"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.TitleLarge"/>

        <TextView
            android:id="@+id/studentCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/count"
            android:textAlignment="textEnd"
            style="@style/TextAppearance.Material3.TitleMedium"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/llClass"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border">
            <TableRow android:background="@color/black" android:padding="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/name"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/created_at"
                    android:textColor="@color/white"/>
            </TableRow>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>