<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TableLayout
            android:id="@+id/tlStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/name"/>

                <TextView
                    android:id="@+id/tvStudentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:layout_marginEnd="10dp"
                    android:text="@string/n_a"/>
            </TableRow>

            <TableRow android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/email"/>

                <TextView
                    android:id="@+id/tvStudentEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:layout_marginEnd="10dp"
                    android:text="@string/n_a"/>
            </TableRow>

            <TableRow android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/created_at"/>

                <TextView
                    android:id="@+id/tvStudentCreatedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:layout_marginEnd="10dp"
                    android:text="@string/n_a"/>
            </TableRow>
        </TableLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilClass"
            android:layout_below="@id/tlStudent"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteClass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/classes"
                android:inputType="none"
                android:padding="4dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_below="@id/tilClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/update"
                android:backgroundTint="@color/black"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/delete"
                android:backgroundTint="@color/error"
                app:cornerRadius="5dp"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>